# MultiplayerGame

./: CMakeLists.txt
src/: network.c  network.h  types.h  utils.c  utils.h
src/client/: client.c  client.h  client_main.c  game.c  game.h
src/server/: server.c  server.h  server_main.c
